codegen/ui_tests/rhai_fn_path_attr.stderr
error: expecting attribute name
  --> ui_tests/rhai_fn_path_attr.rs:11:11
   |
11 | #[rhai_fn(rhai::name = "thing")]
   |           ^^^^
